--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@ header {
   padding: 20px;
   margin-bottom: 30px;
 }
+
+.articolo {
+  display: flex;
+  justify-content: space-between;
+  background-color: beige;
+  margin: 5px 0;
+  padding: 5px;
+  width: 95%;
+  border: 1px solid;
+  border-radius: 5px;
+
+}
